# Tsuzuri

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Justfile  README.md  docker-compose.yml  example.compose.yml  flake.nix  pyproject.toml  settings.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
impl-plans/: v0.md
src/tsuzuri/: __init__.py  api.py  cli.py  config.py  pipeline.py  report.py  schemas.py
src/tsuzuri/fetch/: __init__.py  html_fetcher.py  pdf_fetcher.py  validators.py
src/tsuzuri/filtering/: __init__.py  deduplicator.py  domain_filter.py  url_normalizer.py
src/tsuzuri/llm/: __init__.py  map_summarizer.py  ollama_client.py  prompts.py
src/tsuzuri/search/: __init__.py  query_builder.py  searxng_client.py
src/tsuzuri/storage/: __init__.py  artifact_store.py  nextcloud_webdav.py
tests/: test_api.py  test_artifact_store.py  test_config.py  test_deduplicator.py  test_domain_filter.py  test_fetch_validation.py  test_html_fetcher.py  test_map_summarizer.py  test_nextcloud_webdav.py  test_ollama_client.py  test_pdf_fetcher.py  test_pipeline.py  test_query_builder.py  test_report.py  test_searxng_client.py  test_url_normalizer.py
